#137. Fix export buttons rendering issue on iOS.

--- a/src/scss/components/_export-tools.scss
+++ b/src/scss/components/_export-tools.scss
@@ -5,6 +5,7 @@
 .export-tools {
 	.btn-secondary {
 		background-origin: border-box;
+		outline: 1px solid transparent; // Prevent rendering issue on iOS (thin gap)
 
 		&:focus {
 			.keyboard-user & {
